Add COVID-19 Json generator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -208,7 +208,8 @@ site.footer.link=\
 Links: \
 <a href="/help" title="Digest Service and Bot Commands Cheat Sheet.">Help</a>, \
 <a href="/api/info" title="Information about this system.">System</a>, \
-<a href="/api/rate" title="Exchange rate values.">Rates</a>.
+<a href="/api/rate" title="Exchange rate values.">Rates</a>, \
+<a href="/api/covid" title="COVID-2019 pandemic report in Russian Federation.">COVID-2019</a>.
 site.footer.source=\
 Source code: \
 <a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
