Add Telegram html generator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -287,6 +287,18 @@ site.user.id.sort=Sort by number.
 site.user.group.sort=Sort by group.
 site.user.message.sort=Sort by message count.
 
+covid.head=<strong>COVID-19 pandemic in Russian Federation</strong>
+covid.head.cases=Cases: %s
+covid.head.recover=Recoveries: %s
+covid.head.deaths=Deaths: %s
+covid.head.date=Data for: %s
+covid.head.home=<em>Please stay home!</em>
+covid.increase=↑%s
+covid.table.region=Region
+covid.table.cases=Cases
+covid.table.recover=Recov.
+covid.table.deaths=Deaths
+covid.error=Cannot get COVID-19 data. Maybe it's a conspiracy! Error:\n<pre>\n%s\n</pre>
 covid.error.names=COVID-19 region names map is null or empty!
 covid.error.cases=COVID-19 cases map is null or empty!
 covid.error.hists=COVID-19 history map is null or empty!
