--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -287,6 +287,18 @@ site.user.id.sort=Сортировка по номеру.
 site.user.group.sort=Сортировка по группе.
 site.user.message.sort=Сортировка по количеству сообщений.
 
+covid.head=<strong>Коронавирус в Российской Федерации</strong>
+covid.head.cases=Заразилось: %s
+covid.head.recover=Выздоровело: %s
+covid.head.deaths=Умерло: %s
+covid.head.date=Данные на: %s
+covid.head.home=<em>Убедительная просьба оставаться дома!</em>
+covid.increase=↑%s
+covid.table.region=Регион
+covid.table.cases=Зараз.
+covid.table.recover=Вызд.
+covid.table.deaths=Умер.
+covid.error=Не могу получить данные по COVID-19. Возможно это заговор! Ошибка:\n<pre>\n%s\n</pre>
 covid.error.names=Список имён регионов, заражённых COVID-19 пустой или null!
 covid.error.cases=Список случаев заражения COVID-19 пустой или null!
 covid.error.hists=История заражения COVID-19 пустая или null!
