Implement COVID-2019 report

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -123,6 +123,8 @@ Chat "%s" with id `%d` subscriptions to various channels.\n\n\
 Status: %s\n\n\
 2. Digests and News from MotoFan.Ru group in Telegram\n\
 Status: %s\n\n\
+3. Daily COVID-19 pandemic report in Russian Federation\n\
+Status: %s\n\n\
 Please select an action:
 bot.command.subscribe.subscribed=✅ Subscribed.
 bot.command.subscribe.unsubscribed=❌ Unsubscribed.
@@ -130,6 +132,8 @@ bot.command.subscribe.button.subscribe.motofan=1. Subscribe
 bot.command.subscribe.button.unsubscribe.motofan=1. Unsubscribe
 bot.command.subscribe.button.subscribe.digest=2. Subscribe
 bot.command.subscribe.button.unsubscribe.digest=2. Unsubscribe
+bot.command.subscribe.button.subscribe.covid=3. Subscribe
+bot.command.subscribe.button.unsubscribe.covid=3. Unsubscribe
 bot.command.debug.help=\
 Please choose `/debug` command with argument:\n\
 /debug VRates — Refresh exchange rates.\n\
@@ -137,6 +141,7 @@ Please choose `/debug` command with argument:\n\
 /debug VShredder — Run database shredder.\n\
 /debug VAvatars — Update user avatars.\n\
 /debug VQueries — Clear inline queries map.\n\
+/debug VCovid — Send daily COVID-2019 report.\n\
 /debug BLogUpdates — Show updates in system log.\n\
 /debug BGreetings — Disable greetings.\n\
 /debug BSilent — Disable sending all events to chat.
@@ -287,17 +292,19 @@ site.user.id.sort=Sort by number.
 site.user.group.sort=Sort by group.
 site.user.message.sort=Sort by message count.
 
-covid.head=<strong>COVID-19 pandemic in Russian Federation</strong>
+covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
 covid.head.recover=Recoveries: %s
 covid.head.deaths=Deaths: %s
 covid.head.date=Data for: %s
-covid.head.home=<em>Please stay home!</em>
+covid.head.home=⚠️ Please stay home! ⚠️
 covid.increase=↑%s
+covid.increase.new=, new: ↑%s
 covid.table.region=Region
 covid.table.cases=Cases
 covid.table.recover=Recov.
 covid.table.deaths=Deaths
+covid.source=<em>Source: <a href="https://covid.2gis.ru/">2GIS Maps</a>.</em>
 covid.error=Cannot get COVID-19 data. Maybe it's a conspiracy! Error:\n<pre>\n%s\n</pre>
 covid.error.names=COVID-19 region names map is null or empty!
 covid.error.cases=COVID-19 cases map is null or empty!
