--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -121,7 +121,9 @@ bot.command.subscribe=\
 Подписка чата "%s" с id `%d` на различные каналы.\n\n\
 1. Новые сообщения форума MotoFan.Ru\n\
 Статус: %s\n\n\
-2. Дайджесты и новости группы MotoFan.Ru в Telegram:\n\
+2. Дайджесты и новости группы MotoFan.Ru в Telegram\n\
+Статус: %s\n\n\
+3. Ежедневный отчёт по пандемии COVID-2019 в России\n\
 Статус: %s\n\n\
 Пожалуйста выберите действие:
 bot.command.subscribe.subscribed=✅ Подписка оформлена.
@@ -130,6 +132,8 @@ bot.command.subscribe.button.subscribe.motofan=1. Подписаться
 bot.command.subscribe.button.unsubscribe.motofan=1. Отписаться
 bot.command.subscribe.button.subscribe.digest=2. Подписаться
 bot.command.subscribe.button.unsubscribe.digest=2. Отписаться
+bot.command.subscribe.button.subscribe.covid=3. Подписаться
+bot.command.subscribe.button.unsubscribe.covid=3. Отписаться
 bot.command.debug.help=\
 Выберите команду `/debug` с параметром:\n\
 /debug VRates — Обновить котировки валют.\n\
@@ -137,6 +141,7 @@ bot.command.debug.help=\
 /debug VShredder — Запустить очистку базы данных.\n\
 /debug VAvatars — Обновить аватары пользователей.\n\
 /debug VQueries — Очистить стек inline-запросов.\n\
+/debug VCovid — Отправить отчёт по COVID-2019.\n\
 /debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
 /debug BSilent — Отключить отправку всех событий в чат.
@@ -287,17 +292,19 @@ site.user.id.sort=Сортировка по номеру.
 site.user.group.sort=Сортировка по группе.
 site.user.message.sort=Сортировка по количеству сообщений.
 
-covid.head=<strong>Коронавирус в Российской Федерации</strong>
+covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
 covid.head.recover=Выздоровело: %s
 covid.head.deaths=Умерло: %s
 covid.head.date=Данные на: %s
-covid.head.home=<em>Убедительная просьба оставаться дома!</em>
+covid.head.home=⚠️ Убедительная просьба оставаться дома! ⚠️
 covid.increase=↑%s
+covid.increase.new=, динамика: ↑%s
 covid.table.region=Регион
 covid.table.cases=Зараз.
 covid.table.recover=Вызд.
 covid.table.deaths=Умер.
+covid.source=<em>Источник: <a href="https://covid.2gis.ru/">Карты 2GIS</a>.</em>
 covid.error=Не могу получить данные по COVID-19. Возможно это заговор! Ошибка:\n<pre>\n%s\n</pre>
 covid.error.names=Список имён регионов, заражённых COVID-19 пустой или null!
 covid.error.cases=Список случаев заражения COVID-19 пустой или null!
