Add Morning worker

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -198,6 +198,14 @@ bot.hashtag.digest.subscribe.wrote=wrote
 bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
 bot.hashtag.digest.subscribe.link=Link to the message️
 bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
+bot.morning=\
+Good morning guys! ☕️\n\
+Has everyone woken up or not yet?! ☕\n\
+What are you still sleeping, little sleepyheads?! Wake up faster! ☕\n\
+Have you already made aromatic coffee? ☕\n\
+What a beautiful sunny morning! ☕\n\
+Huh… What a terrible sleepless night… 😞 ☕\n\
+Good morning! ☕
 
 site.title=MotoFan.Ru news in Telegram group!
 site.title.search=Search | MotoFan.Ru news in Telegram group!
