--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -198,6 +198,14 @@ bot.hashtag.digest.subscribe.wrote=пишет
 bot.hashtag.digest.subscribe.read=Прочитать сообщение в группе:\n➡
 bot.hashtag.digest.subscribe.link=Ссылка на сообщение
 bot.info.digest.stats=Всего #digest'ов: %d, стр. %d/%d:
+bot.morning=\
+С добрым утром, ребята! ☕️\n\
+Уже все проснулись или ещё нет?! ☕\n\
+Ну что же вы всё ещё спите, засони?! А ну вставайте быстрее! ☕\n\
+А вы уже заварили себе ароматный кофе? ☕\n\
+Какое прекрасное солнечное утро! ☕\n\
+Бррр… Что за ужасная бессоная ночка… 😞 ☕\n\
+Доброго утра! ☕
 
 site.title=Новости MotoFan.Ru в конференции Telegram!
 site.title.search=Поиск | Новости MotoFan.Ru в конференции Telegram!
