Update /debug command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,6 +142,7 @@ Please choose `/debug` command with argument:\n\
 /debug VAvatars — Update user avatars.\n\
 /debug VQueries — Clear inline queries map.\n\
 /debug VCovid — Send daily COVID-2019 report.\n\
+/debug VMorning — Send good morning phrase.\n\
 /debug BLogUpdates — Show updates in system log.\n\
 /debug BGreetings — Disable greetings.\n\
 /debug BSilent — Disable sending all events to chat.
