--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -142,6 +142,7 @@ bot.command.debug.help=\
 /debug VAvatars — Обновить аватары пользователей.\n\
 /debug VQueries — Очистить стек inline-запросов.\n\
 /debug VCovid — Отправить отчёт по COVID-2019.\n\
+/debug VMorning — Отправить фразу с добрым утром.\n\
 /debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
 /debug BSilent — Отключить отправку всех событий в чат.
