Add number column to users page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -293,7 +293,8 @@ site.goto.home=<a href="/" title="Go to the start page.">« Go to home</a>
 site.user.title=List of users
 site.user.avatar=Avatar
 site.user.name=Name
-site.user.id=Number
+site.user.id=Identifier
+site.user.number=Number
 site.user.group=Group
 site.user.message=Messages
 site.user.name.sort=Sort by name.
