Prepare codebase for implementing control panel

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -301,6 +301,8 @@ site.user.name.sort=Sort by name.
 site.user.id.sort=Sort by number.
 site.user.group.sort=Sort by group.
 site.user.message.sort=Sort by message count.
+site.obey.title=Control Panel
+site.obey.frame.title=Tables
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
