--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -301,6 +301,8 @@ site.user.name.sort=Сортировка по имени.
 site.user.id.sort=Сортировка по номеру.
 site.user.group.sort=Сортировка по группе.
 site.user.message.sort=Сортировка по количеству сообщений.
+site.obey.title=Панель управления
+site.obey.frame.title=Таблицы
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
