Show digest table on control panel

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -303,6 +303,16 @@ site.user.group.sort=Sort by group.
 site.user.message.sort=Sort by message count.
 site.obey.title=Control Panel
 site.obey.frame.title=Tables
+site.obey.content.data=Data
+site.obey.content.id=ID
+site.obey.content.user=User
+site.obey.content.chat=Chat
+site.obey.content.date=Date
+site.obey.content.text=Text
+site.obey.content.action=Action
+site.obey.content.action.edit=Edit
+site.obey.content.action.delete=Delete
+site.obey.content.action.add=Add
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
