--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -303,6 +303,16 @@ site.user.group.sort=Сортировка по группе.
 site.user.message.sort=Сортировка по количеству сообщений.
 site.obey.title=Панель управления
 site.obey.frame.title=Таблицы
+site.obey.content.data=Данные
+site.obey.content.id=ИД
+site.obey.content.user=Юзер
+site.obey.content.chat=Чат
+site.obey.content.date=Дата
+site.obey.content.text=Текст
+site.obey.content.action=Действие
+site.obey.content.action.edit=Изменить
+site.obey.content.action.delete=Удалить
+site.obey.content.action.add=Добавить
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
