Refactor header and try to add digest edit form

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -305,14 +305,18 @@ site.obey.title=Панель управления
 site.obey.frame.title=Таблицы
 site.obey.content.data=Данные
 site.obey.content.id=ИД
+site.obey.content.digest=Дайджест
 site.obey.content.user=Юзер
+site.obey.content.username=Имя
 site.obey.content.chat=Чат
 site.obey.content.date=Дата
+site.obey.content.message=Сообщение
 site.obey.content.text=Текст
+site.obey.content.avatar=Аватар
 site.obey.content.action=Действие
 site.obey.content.action.edit=Изменить
 site.obey.content.action.delete=Удалить
-site.obey.content.action.add=Добавить
+site.obey.content.action.add=Добавить/Изменить
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
