--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -305,14 +305,18 @@ site.obey.title=Control Panel
 site.obey.frame.title=Tables
 site.obey.content.data=Data
 site.obey.content.id=ID
+site.obey.content.digest=Digest
 site.obey.content.user=User
+site.obey.content.username=Username
 site.obey.content.chat=Chat
 site.obey.content.date=Date
+site.obey.content.message=Message
 site.obey.content.text=Text
+site.obey.content.avatar=Avatar
 site.obey.content.action=Action
 site.obey.content.action.edit=Edit
 site.obey.content.action.delete=Delete
-site.obey.content.action.add=Add
+site.obey.content.action.add=Add/Edit
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
