Implement digest user editing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -309,6 +309,7 @@ site.obey.content.digest=Digest
 site.obey.content.user=User
 site.obey.content.user.id=User ID
 site.obey.content.username=Username
+site.obey.content.nickname=Nickname
 site.obey.content.chat=Chat
 site.obey.content.chat.id=Chat ID
 site.obey.content.date=Date
@@ -317,12 +318,15 @@ site.obey.content.message=Message
 site.obey.content.message.id=Message
 site.obey.content.text=Text
 site.obey.content.avatar=Avatar
+site.obey.content.avatar.link=Avatar Link
 site.obey.content.action=Action
 site.obey.content.action.edit=Edit
 site.obey.content.action.delete=Delete
 site.obey.content.action.add=Add
 site.obey.digest.add=Add Digest Form
-site.obey.digest.edit=Edit Digest From
+site.obey.digest.edit=Edit Digest Form
+site.obey.user.add=Add Digest User Form
+site.obey.user.edit=Edit Digest User From
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
