--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -309,6 +309,7 @@ site.obey.content.digest=Дайджест
 site.obey.content.user=Пользователь
 site.obey.content.user.id=ИД Пользователя
 site.obey.content.username=Имя
+site.obey.content.nickname=Ник
 site.obey.content.chat=Чат
 site.obey.content.chat.id=ИД Чата
 site.obey.content.date=Дата
@@ -317,12 +318,15 @@ site.obey.content.message=Сообщение
 site.obey.content.message.id=ИД Сообщения
 site.obey.content.text=Текст
 site.obey.content.avatar=Аватар
+site.obey.content.avatar.link=Ссылка на аватар
 site.obey.content.action=Действие
 site.obey.content.action.edit=Изменить
 site.obey.content.action.delete=Удалить
 site.obey.content.action.add=Добавить
 site.obey.digest.add=Форма добавления дайджеста
 site.obey.digest.edit=Форма редактирования дайджеста
+site.obey.user.add=Форма добавления пользователя
+site.obey.user.edit=Форма редактирования пользователя
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
