Add some admin links

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -325,8 +325,10 @@ site.obey.content.action.delete=Delete
 site.obey.content.action.add=Add
 site.obey.digest.add=Add Digest Form
 site.obey.digest.edit=Edit Digest Form
+site.obey.digest.shredder=Drop Obsolete Digests
 site.obey.user.add=Add Digest User Form
 site.obey.user.edit=Edit Digest User From
+site.obey.user.avatar=Update User Avatars
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
