--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -325,8 +325,10 @@ site.obey.content.action.delete=Удалить
 site.obey.content.action.add=Добавить
 site.obey.digest.add=Форма добавления дайджеста
 site.obey.digest.edit=Форма редактирования дайджеста
+site.obey.digest.shredder=Удаление устаревших дайджестов
 site.obey.user.add=Форма добавления пользователя
 site.obey.user.edit=Форма редактирования пользователя
+site.obey.user.avatar=Обновить аватары пользователей
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
