Implement bot settings editing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -315,7 +315,7 @@ site.obey.content.chat.id=Chat ID
 site.obey.content.date=Date
 site.obey.content.timestamp=Timestamp
 site.obey.content.message=Message
-site.obey.content.message.id=Message
+site.obey.content.message.id=Message ID
 site.obey.content.text=Text
 site.obey.content.avatar=Avatar
 site.obey.content.avatar.link=Avatar Link
@@ -323,12 +323,14 @@ site.obey.content.action=Action
 site.obey.content.action.edit=Edit
 site.obey.content.action.delete=Delete
 site.obey.content.action.add=Add
+site.obey.content.action.save=Save
 site.obey.digest.add=Add Digest Form
 site.obey.digest.edit=Edit Digest Form
 site.obey.digest.shredder=Drop Obsolete Digests
 site.obey.user.add=Add Digest User Form
 site.obey.user.edit=Edit Digest User From
 site.obey.user.avatar=Update User Avatars
+site.obey.setup=Telegram Bot Settings
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
