Implement subscriber table editing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -312,6 +312,7 @@ site.obey.content.username=Username
 site.obey.content.nickname=Nickname
 site.obey.content.chat=Chat
 site.obey.content.chat.id=Chat ID
+site.obey.content.chat.name=Chat Name
 site.obey.content.date=Date
 site.obey.content.timestamp=Timestamp
 site.obey.content.message=Message
@@ -328,9 +329,10 @@ site.obey.digest.add=Add Digest Form
 site.obey.digest.edit=Edit Digest Form
 site.obey.digest.shredder=Drop Obsolete Digests
 site.obey.user.add=Add Digest User Form
-site.obey.user.edit=Edit Digest User From
+site.obey.user.edit=Edit Digest User Form
 site.obey.user.avatar=Update User Avatars
-site.obey.setup=Telegram Bot Settings
+site.obey.setup=Telegram Bot Settings Form
+site.obey.subscribe=Add Subscriber Form
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
