--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -312,6 +312,7 @@ site.obey.content.username=Имя
 site.obey.content.nickname=Ник
 site.obey.content.chat=Чат
 site.obey.content.chat.id=ИД Чата
+site.obey.content.chat.name=Имя чата
 site.obey.content.date=Дата
 site.obey.content.timestamp=Временная метка
 site.obey.content.message=Сообщение
@@ -331,6 +332,7 @@ site.obey.user.add=Форма добавления пользователя
 site.obey.user.edit=Форма редактирования пользователя
 site.obey.user.avatar=Обновить аватары пользователей
 site.obey.setup=Настройки Telegram-бота
+site.obey.subscribe=Форма добавления подписчиков
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
