Add exchange rate editor

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -332,7 +332,11 @@ site.obey.user.add=Форма добавления пользователя
 site.obey.user.edit=Форма редактирования пользователя
 site.obey.user.avatar=Обновить аватары пользователей
 site.obey.setup=Настройки Telegram-бота
-site.obey.subscribe=Форма добавления подписчиков
+site.obey.subscribe.digest=Форма добавления подписчиков на дайджесты
+site.obey.subscribe.motofan=Форма добавления подписчиков на посты MotoFan.Ru
+site.obey.subscribe.covid=Форма добавления подписчиков на отчёты COVID-2019
+site.obey.subscribe.greeting=Форма добавления чатов, игнорирующих приветствия
+site.obey.exchange=Котировки валют
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
