--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -332,7 +332,11 @@ site.obey.user.add=Add Digest User Form
 site.obey.user.edit=Edit Digest User Form
 site.obey.user.avatar=Update User Avatars
 site.obey.setup=Telegram Bot Settings Form
-site.obey.subscribe=Add Subscriber Form
+site.obey.subscribe.digest=Add Digest Subscriber Form
+site.obey.subscribe.motofan=Add MotoFan.Ru Subscriber Form
+site.obey.subscribe.covid=Add COVID-2019 Subscriber Form
+site.obey.subscribe.greeting=Add Greetings Ignoring Chat Form
+site.obey.exchange=Exchange Rates
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
