Add update exchange link

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -337,6 +337,7 @@ site.obey.subscribe.motofan=Add MotoFan.Ru Subscriber Form
 site.obey.subscribe.covid=Add COVID-2019 Subscriber Form
 site.obey.subscribe.greeting=Add Greetings Ignoring Chat Form
 site.obey.exchange=Exchange Rates
+site.obey.exchange.update=Update Exchange Rates
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
