--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -337,6 +337,7 @@ site.obey.subscribe.motofan=Форма добавления подписчико
 site.obey.subscribe.covid=Форма добавления подписчиков на отчёты COVID-2019
 site.obey.subscribe.greeting=Форма добавления чатов, игнорирующих приветствия
 site.obey.exchange=Котировки валют
+site.obey.exchange.update=Обновить котировки валют
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
