Add Motofan Posts link

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -302,7 +302,9 @@ site.user.id.sort=Sort by number.
 site.user.group.sort=Sort by group.
 site.user.message.sort=Sort by message count.
 site.obey.title=Control Panel
-site.obey.frame.title=Tables
+site.obey.frame.tables=Tables
+site.obey.frame.links=Links
+site.obey.frame.link.motofan=MotoFan.Ru Posts
 site.obey.content.data=Data
 site.obey.content.id=ID
 site.obey.content.digest=Digest
