--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -302,7 +302,9 @@ site.user.id.sort=Сортировка по номеру.
 site.user.group.sort=Сортировка по группе.
 site.user.message.sort=Сортировка по количеству сообщений.
 site.obey.title=Панель управления
-site.obey.frame.title=Таблицы
+site.obey.frame.tables=Таблицы
+site.obey.frame.links=Ссылки
+site.obey.frame.link.motofan=Посты MotoFan.Ru
 site.obey.content.data=Данные
 site.obey.content.id=ИД
 site.obey.content.digest=Дайджест
