Add COVID-2019 report link

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -340,6 +340,7 @@ site.obey.subscribe.covid=Форма добавления подписчиков
 site.obey.subscribe.greeting=Форма добавления чатов, игнорирующих приветствия
 site.obey.exchange=Котировки валют
 site.obey.exchange.update=Обновить котировки валют
+site.obey.covid.send=Отправить отчёт по COVID-19
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
