--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -340,6 +340,7 @@ site.obey.subscribe.covid=Add COVID-2019 Subscriber Form
 site.obey.subscribe.greeting=Add Greetings Ignoring Chat Form
 site.obey.exchange=Exchange Rates
 site.obey.exchange.update=Update Exchange Rates
+site.obey.covid.send=Send COVID-2019 Report
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
