--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -304,7 +304,6 @@ site.user.message.sort=Sort by message count.
 site.obey.title=Control Panel
 site.obey.frame.tables=Tables
 site.obey.frame.links=Links
-site.obey.frame.link.motofan=MotoFan.Ru Posts
 site.obey.content.data=Data
 site.obey.content.id=ID
 site.obey.content.digest=Digest
@@ -341,6 +340,7 @@ site.obey.subscribe.greeting=Add Greetings Ignoring Chat Form
 site.obey.exchange=Exchange Rates
 site.obey.exchange.update=Update Exchange Rates
 site.obey.covid.send=Send COVID-2019 Report
+site.obey.motofan.send=Send New MotoFan.Ru Posts
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
