Add other links/workers

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -329,6 +329,9 @@ site.obey.content.action.save=Save
 site.obey.digest.add=Add Digest Form
 site.obey.digest.edit=Edit Digest Form
 site.obey.digest.shredder=Drop Obsolete Digests
+site.obey.digest.callback=Clear Callback Queries map
+site.obey.digest.callback.size=Size:
+site.obey.digest.morning=Send Good Morning phrase
 site.obey.user.add=Add Digest User Form
 site.obey.user.edit=Edit Digest User Form
 site.obey.user.avatar=Update User Avatars
