--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -329,6 +329,9 @@ site.obey.content.action.save=Сохранить
 site.obey.digest.add=Форма добавления дайджеста
 site.obey.digest.edit=Форма редактирования дайджеста
 site.obey.digest.shredder=Удаление устаревших дайджестов
+site.obey.digest.callback=Очистить карту обратных запросов
+site.obey.digest.callback.size=Размер:
+site.obey.digest.morning=Отправить фразу с добрым утром
 site.obey.user.add=Форма добавления пользователя
 site.obey.user.edit=Форма редактирования пользователя
 site.obey.user.avatar=Обновить аватары пользователей
