Add sender form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -344,6 +344,12 @@ site.obey.exchange=Exchange Rates
 site.obey.exchange.update=Update Exchange Rates
 site.obey.covid.send=Send COVID-2019 Report
 site.obey.motofan.send=Send New MotoFan.Ru Posts
+site.obey.send=Send
+site.obey.send.title=Send to chat
+site.obey.send.sticker=Sticker
+site.obey.send.sticker.id=Sticker ID
+site.obey.send.image=Image
+site.obey.send.image.url=Image Url
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
