--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -344,6 +344,12 @@ site.obey.exchange=Котировки валют
 site.obey.exchange.update=Обновить котировки валют
 site.obey.covid.send=Отправить отчёт по COVID-19
 site.obey.motofan.send=Отправить новые посты с форума MotoFan.Ru
+site.obey.send=Отправить
+site.obey.send.title=Отправить в чат
+site.obey.send.sticker=Стикер
+site.obey.send.sticker.id=ИД Стикера
+site.obey.send.image=Изображение
+site.obey.send.image.url=Ссылка на изображение
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
