Enable WebSecurity module and add configuration

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -304,6 +304,7 @@ site.user.message.sort=Sort by message count.
 site.obey.title=Control Panel
 site.obey.frame.tables=Tables
 site.obey.frame.links=Links
+site.obey.frame.link.logout=Logout
 site.obey.content.data=Data
 site.obey.content.id=ID
 site.obey.content.digest=Digest
