--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -304,6 +304,7 @@ site.user.message.sort=Сортировка по количеству сообщ
 site.obey.title=Панель управления
 site.obey.frame.tables=Таблицы
 site.obey.frame.links=Ссылки
+site.obey.frame.link.logout=Выход
 site.obey.content.data=Данные
 site.obey.content.id=ИД
 site.obey.content.digest=Дайджест
