--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -351,6 +351,15 @@ site.obey.send.sticker=Sticker
 site.obey.send.sticker.id=Sticker ID
 site.obey.send.image=Image
 site.obey.send.image.url=Image Url
+site.login.title=Authorization
+site.login.head=Login Form
+site.login.username=Username:
+site.login.password=Passoword:
+site.login.username.placeholder=Enter username…
+site.login.password.placeholder=Enter password…
+site.login.button=Login
+site.login.key=Key:
+site.login.error=Incorrect user data!
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
 covid.head.cases=Cases: %s
