--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -351,6 +351,15 @@ site.obey.send.sticker=Стикер
 site.obey.send.sticker.id=ИД Стикера
 site.obey.send.image=Изображение
 site.obey.send.image.url=Ссылка на изображение
+site.login.title=Авторизация
+site.login.head=Форма входа
+site.login.username=Имя:
+site.login.password=Пароль:
+site.login.username.placeholder=Имя пользователя…
+site.login.password.placeholder=Пароль пользователя…
+site.login.button=Вход
+site.login.key=Ключ:
+site.login.error=Неправильные данные пользователя!
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
 covid.head.cases=Заразилось: %s
