Prepare to new COVID-2019 Json API from 2GIS

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -223,7 +223,8 @@ Links: \
 <a href="/help" title="Digest Service and Bot Commands Cheat Sheet.">Help</a>, \
 <a href="/api/info" title="Information about this system.">System</a>, \
 <a href="/api/rate" title="Exchange rate values.">Rates</a>, \
-<a href="/api/covid" title="COVID-2019 pandemic report in Russian Federation.">COVID-2019</a>.
+COVID-2019: <a href="/api/covid/ru" title="COVID-2019 pandemic report in Russian Federation.">Ru</a>, \
+<a href="/api/covid/ua" title="COVID-2019 pandemic report in Ukraine.">Ua</a>.
 site.footer.source=\
 Source code: \
 <a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
