--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -223,7 +223,8 @@ site.footer.link=\
 <a href="/help" title="Справка по сервису и командам бота.">Помощь</a>, \
 <a href="/api/info" title="Информация об этой системе.">Система</a>, \
 <a href="/api/rate" title="Котировки валют и металлов.">Котировки</a>, \
-<a href="/api/covid" title="Пандемия COVID-2019 в Российской Федерации.">COVID-2019</a>.
+COVID-2019: <a href="/api/covid/ru" title="Пандемия COVID-2019 в Российской Федерации.">Ru</a>, \
+<a href="/api/covid/ua" title="Пандемия COVID-2019 в Украине.">Ua</a>.
 site.footer.source=\
 Исходный код: \
 <a href="//github.com/EXL/DigestService" target="_blank" title="Репозиторий Digest Service на GitHub'е.">Digest Service</a>.
