Fix table length and format

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -386,3 +386,4 @@ covid.error=Cannot get COVID-19 data. Maybe it's a conspiracy! Error:\n<pre>\n%s
 covid.error.names=COVID-19 region names map is null or empty!
 covid.error.cases=COVID-19 cases map is null or empty!
 covid.error.hists=COVID-19 history map is null or empty!
+covid.error.long=For other regions, see the link below.
