Update COVID-2019 translations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -369,7 +369,7 @@ site.login.button=Login
 site.login.key=Key:
 site.login.error=Incorrect user data!
 
-covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
+covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Cases: %s
 covid.head.recover=Recoveries: %s
 covid.head.deaths=Deaths: %s
