--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -369,7 +369,7 @@ site.login.button=Вход
 site.login.key=Ключ:
 site.login.error=Неправильные данные пользователя!
 
-covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
+covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Заразилось: %s
 covid.head.recover=Выздоровело: %s
 covid.head.deaths=Умерло: %s
