--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -1,12 +1,12 @@
-covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
-covid.head.cases=Заразилось: %s
-covid.head.recover=Выздоровело: %s
-covid.head.deaths=Умерло: %s
-covid.head.date=Данные на: %s
-covid.head.home=⚠️ Убедительная просьба оставаться дома! ⚠️
-covid.increase.new=, динамика: ↑%s
-covid.table.region=Регион
+covid.head=<strong>Коронавірус в Україні (COVID-2019) 🇺🇦</strong>
+covid.head.cases=Заразилося: %s
+covid.head.recover=Видужала: %s
+covid.head.deaths=Померло: %s
+covid.head.date=Дані на: %s
+covid.head.home=⚠️ Переконливе прохання залишатися вдома! ⚠️
+covid.increase.new=, динаміка: ↑%s
+covid.table.region=Регіон
 covid.table.cases=Зараж.
-covid.table.recover=Вызд.
-covid.table.deaths=Умер.
-covid.source=<em>Источник: <a href="https://covid.2gis.ru/">Карты 2GIS</a>.</em>
+covid.table.recover=Видуж.
+covid.table.deaths=Помер.
+covid.source=<em>Джерело: <a href="https://covid.2gis.ru/">Гео-інформаційний сервіс 2GIS</a>.</em>
