Update COVID-2019 translations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -303,7 +303,7 @@ site.user.id.sort=Sort by number.
 site.user.group.sort=Sort by group.
 site.user.message.sort=Sort by message count.
 
-covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019)</strong>
+covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Cases: %s
 covid.head.recover=Recoveries: %s
 covid.head.deaths=Deaths: %s
