--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -303,7 +303,7 @@ site.user.id.sort=Сортировка по номеру.
 site.user.group.sort=Сортировка по группе.
 site.user.message.sort=Сортировка по количеству сообщений.
 
-covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019)</strong>
+covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Заразилось: %s
 covid.head.recover=Выздоровело: %s
 covid.head.deaths=Умерло: %s
