--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -322,6 +322,10 @@ site.obey.content.message.id=Message ID
 site.obey.content.text=Text
 site.obey.content.avatar=Avatar
 site.obey.content.avatar.link=Avatar Link
+site.obey.content.password=Password
+site.obey.content.enabled=Enabled
+site.obey.content.role=Role
+site.obey.content.role.select=Select a Role
 site.obey.content.action=Action
 site.obey.content.action.edit=Edit
 site.obey.content.action.delete=Delete
@@ -336,6 +340,8 @@ site.obey.digest.morning=Send Good Morning phrase
 site.obey.user.add=Add Digest User Form
 site.obey.user.edit=Edit Digest User Form
 site.obey.user.avatar=Update User Avatars
+site.obey.member.add=Add Member Form
+site.obey.member.edit=Edit Member Form
 site.obey.setup=Telegram Bot Settings Form
 site.obey.subscribe.digest=Add Digest Subscriber Form
 site.obey.subscribe.motofan=Add MotoFan.Ru Subscriber Form
