Check owner role on editing member table

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -342,6 +342,7 @@ site.obey.user.edit=Edit Digest User Form
 site.obey.user.avatar=Update User Avatars
 site.obey.member.add=Add Member Form
 site.obey.member.edit=Edit Member Form
+site.obey.member.access.denied=Access Denied!
 site.obey.setup=Telegram Bot Settings Form
 site.obey.subscribe.digest=Add Digest Subscriber Form
 site.obey.subscribe.motofan=Add MotoFan.Ru Subscriber Form
