--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -342,6 +342,7 @@ site.obey.user.edit=Форма редактирования пользовате
 site.obey.user.avatar=Обновить аватары пользователей
 site.obey.member.add=Форма добавления участника
 site.obey.member.edit=Форма редактирования участника
+site.obey.member.access.denied=Доступ запрещен!
 site.obey.setup=Настройки Telegram-бота
 site.obey.subscribe.digest=Форма добавления подписчиков на дайджесты
 site.obey.subscribe.motofan=Форма добавления подписчиков на посты MotoFan.Ru
