Fix covid-2019 links

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -381,7 +381,7 @@ covid.table.region=Регион
 covid.table.cases=Зараж.
 covid.table.recover=Вызд.
 covid.table.deaths=Умер.
-covid.source=<em>Источник: <a href="https://covid.2gis.ru/">Карты 2GIS</a>.</em>
+covid.source=<em>Источник: <a href="https://covid.2gis.ru/stat">Карты 2GIS</a>.</em>
 covid.error=Не могу получить данные по COVID-19. Возможно это заговор! Ошибка:\n<pre>\n%s\n</pre>
 covid.error.names=Список имён регионов, заражённых COVID-19 пустой или null!
 covid.error.cases=Список случаев заражения COVID-19 пустой или null!
