--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -9,4 +9,4 @@ covid.table.region=Регіон
 covid.table.cases=Захв.
 covid.table.recover=Одуж.
 covid.table.deaths=Помер.
-covid.source=<em>Джерело: <a href="https://covid.2gis.ua/">Гео-інформаційний сервіс 2GIS</a>.</em>
+covid.source=<em>Джерело: <a href="https://covid.2gis.ua/stat">Гео-інформаційний сервіс 2GIS</a>.</em>
