--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,11 +2,10 @@ motofan.title=New message on the MotoFan.Ru forum!
 motofan.wrote=wrote
 motofan.read=Read message in the topic:\n➡️
 
-exchange.change=Change:
 exchange.error.value=<error>
 exchange.error.report=Error getting currency rates data.
-exchange.change.up=⬆️
-exchange.change.down=⬇️
+exchange.change.up=↑
+exchange.change.down=↓
 exchange.bank.header=Exchange rates on %s:
 exchange.bank.ru=Source — CBR.
 exchange.bank.ua=Source — NBU.
