--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -2,11 +2,10 @@ motofan.title=Новое сообщение на форуме MotoFan.Ru!
 motofan.wrote=пишет
 motofan.read=Прочитать сообщение в теме:\n➡️
 
-exchange.change=Изменение:
 exchange.error.value=<error>
 exchange.error.report=Ошибка получения данных котировок.
-exchange.change.up=⬆️
-exchange.change.down=⬇️
+exchange.change.up=↑
+exchange.change.down=↓
 exchange.bank.header=Курс валют на %s:
 exchange.bank.ru=Источник — ЦБ РФ.
 exchange.bank.ua=Источник — НБУ.
