Fix text cropping on large messages

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -22,7 +22,7 @@ exchange.bank.by.button=🇧🇾
 exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
 
-bot.warn.send.long=<текст обрезан>
+bot.warn.send.long=[текст обрезан]
 bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка:\n```\n%s\n```
 bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка:\n```\n%s\n```
 bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%d`, ошибка:\n```\n%s\n```
