--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,7 +22,7 @@ exchange.bank.by.button=🇧🇾
 exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
 
-bot.warn.send.long=<text is cropped>
+bot.warn.send.long=[text is cropped]
 bot.error.send.message=Cannot send message `%s` into `%d` chat, error:\n```\n%s\n```
 bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error:\n```\n%s\n```
 bot.error.send.image=Cannot send image from url `%s` into `%d` chat, error:\n```\n%s\n```
