Start to fill help manual

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -287,8 +287,6 @@ site.error.title=Sorry, something went wrong...
 site.error.timestamp=Timestamp:
 site.error.status=Status:
 site.error.message=Message:
-site.help.title=Digest Service and Telegram Bot Commands Cheat Sheet
-site.help.content=Lorem ipsulum
 site.goto.home=<a href="/" title="Go to the start page.">« Go to home</a>
 site.user.title=List of users
 site.user.avatar=Avatar
@@ -367,6 +365,8 @@ site.login.password.placeholder=Enter password…
 site.login.button=Login
 site.login.key=Key:
 site.login.error=Incorrect user data!
+site.help.title=Digest Service and Telegram Bot Commands Cheat Sheet
+site.help.title.commands=Lorem ipsulum
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Cases: %s
