--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -287,8 +287,6 @@ site.error.title=Ой, что-то пошло не так...
 site.error.timestamp=Временная метка:
 site.error.status=Статус:
 site.error.message=Сообщение:
-site.help.title=Справка по сервису и командам Telegram-бота
-site.help.content=Lorem ipsulum
 site.goto.home=<a href="/" title="Перейти на главную страницу.">« На главную</a>
 site.user.title=Список пользователей
 site.user.avatar=Аватар
@@ -367,6 +365,10 @@ site.login.password.placeholder=Пароль пользователя…
 site.login.button=Вход
 site.login.key=Ключ:
 site.login.error=Неправильные данные пользователя!
+site.help.title=Справка по сервису и командам Telegram-бота
+site.help.title.commands=Команды бота, доступные каждому участнику группы
+site.help.command.digest=\
+— Отобразить сообщения с тегом <em>#digest</em>, которые были собраны в текущем чате за всё время.
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Заразилось: %s
